--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -45,7 +45,7 @@
                 <item
                     android:id="@+id/notifications"
                     android:icon="@drawable/ic_notifications"
-                    android:title="Notifications"/>
+                    android:title="Messaging"/>
                 <item
                     android:id="@+id/logout"
                     android:icon="@drawable/ic_logout"
