--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,4 +11,10 @@
         <item name="boxStrokeColor">#fff</item>
         <item name="boxStrokeWidth">2dp</item>
     </style>
+
+    <style name="StyleWithoutToolbar" parent="Theme.AppCompat.Light.NoActionBar">
+
+
+
+    </style>
 </resources>
