--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -8,9 +8,22 @@
         android:title="Home"/>
 
     <item
+        android:id="@+id/addWorkouts"
+        android:icon="@drawable/ic_plus"
+        android:visible="true"
+        android:title="Add Workouts"/>
+
+    <item
+        android:id="@+id/seeWorkouts"
+        android:icon="@drawable/ic_see"
+        android:visible="true"
+        android:title="See Workouts"/>
+
+
+    <item
         android:id="@+id/sentEmail"
         android:icon="@drawable/ic_check"
-        android:title="Trainer Email"/>
+        android:title="Messaging"/>
     <item
         android:id="@+id/compatible"
         android:icon="@drawable/compatible"
@@ -45,6 +58,7 @@
                 <item
                     android:id="@+id/notifications"
                     android:icon="@drawable/ic_notifications"
+                    android:visible="false"
                     android:title="Messaging"/>
                 <item
                     android:id="@+id/logout"
@@ -55,20 +69,21 @@
         </menu>
     </item>
 
-    <item android:title="Communicate">
-        <menu>
-            <group android:checkableBehavior="single">
-                <item
-                    android:id="@+id/about"
-                    android:icon="@drawable/ic_about"
-                    android:title="About Us"/>
-                <item
-                    android:id="@+id/share"
-                    android:icon="@drawable/ic_share"
-                    android:title="Share"/>
+<!--    <item android:title="Communicate">-->
+<!--        <menu>-->
+<!--            <group android:checkableBehavior="single">-->
+<!--                <item-->
+<!--                    android:id="@+id/about"-->
+<!--                    android:icon="@drawable/ic_about"-->
+<!--                    android:title="About Us"/>-->
+<!--                <item-->
+<!--                    android:id="@+id/share"-->
+<!--                    android:icon="@drawable/ic_share"-->
+<!--                    android:visible="false"-->
+<!--                    android:title="Share"/>-->
 
-            </group>
-        </menu>
-    </item>
+<!--            </group>-->
+<!--        </menu>-->
+<!--    </item>-->
 
 </menu>
