--- a/app/src/main/res/layout/user_holder.xml
+++ b/app/src/main/res/layout/user_holder.xml
@@ -36,5 +36,13 @@
             android:textColor="#fff"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:id="@+id/txttype"
+            android:layout_width="wrap_content"
+            android:layout_marginRight="30dp"
+            android:textColor="#fff"
+            android:layout_height="wrap_content"/>
+
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
